# cross_platform_screenshot

./: .gitignore  CMakeLists.txt  README.md
cp_screenshot_core/: CMakeLists.txt
cp_screenshot_core/include/cp_screenshot/: cp_screenshot.h
cp_screenshot_core/src/: screenshot_os_linux.cpp  screenshot_os_mac.mm  screenshot_os_win.cpp
cp_screenshot_example/: CMakeLists.txt  main.cpp
src/: an_example.cpp  screenshot.h  screenshot_os_linux.cpp  screenshot_os_mac.mm  screenshot_os_win.cpp
